--- a/online_shop/public/index.html
+++ b/online_shop/public/index.html
@@ -25,9 +25,16 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <style>
+       @font-face {
+            font-family: 'Yekan';
+            src: url('../public/Yekan.woff' ) format('woff');
+        }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+
     <div id="root"></div>
     <!--
       This HTML file is a template.
