--- a/online_shop/public/index.html
+++ b/online_shop/public/index.html
@@ -28,7 +28,7 @@
     <style>
        @font-face {
             font-family: 'Yekan';
-            src: url('../public/Yekan.woff' ) format('woff');
+            src: url('./Yekan.woff' ) format('woff');
         }
     </style>
   </head>
